# tram-sdk

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  asset.db  bepito.bepis  compile_flags.txt  entities.entdef  maketool.ini  project.cfg  tram-sdk.cppcheck  tram-sdk.mk  tram-sdk.project
data/: demo.cell  demo_backup.celle  demo_mov.cell  demo_mov.celle  dialogs.dialog  editor_data.txt  editor_settings.ini  entities.entdef  glyph.info  glyph_text.info  glyph_text.info_old  glyph_text_bold.info  inter.info  items.item  jost.info  loader-test-cell1.cell  loader-test-cell2.cell  loader-test-cell2.celle  loader-test-cell3.cell  loader-test-cell4.cell  loader-test-cell5.cell  lv.lang  material.list  quests.quest  texture.list
data/animations/: mongus-jump.anim  mongus-run.anim  mongus-sway.anim  mongus-turn-around.anim  mongus-wag-tail.anim  mongus-walk.anim  mongus.anim  turtle.anim  viewmodels.anim
data/models/: bingus.dymdl  bingus_old.dymdl  chamberpot.dymdl  chamberpot2.dymdl  crate.collmdl  crate_ligma.dymdl  crate_plain.dymdl  devukaste.mdmdl  errordynamic.dymdl  errorstatic.stmdl  floppa.dymdl  ftft.collmdl  ftft.stmdl  kadbusest.dymdl  kadbusest2.stmdl  kadbusest3.dymdl  metalakaste.dymdl  mongus_OLD.dymdl  movs.collmdl  movs.stmdl  movs2.stmdl  paliktnis.collmdl  paliktnis.stmdl  plane.dymdl  platforma.collmdl  platforma.stmdl  sphere.dymdl  square10x10.collmdl  square10x10.stmdl  tepik.stmdl  translucent.dymdl  trigger.collmdl  trigger.stmdl  turtle.dymdl  untitled.dymdl  viewmodel_aamuris.dymdl  viewmodel_rifle.dymdl  viewmodel_stapler.dymdl  worldspawn.collmdl  worldspawn.stmdl
data/paths/: test.path
data/sprites/: convchar.py  convchar2.py  font_debug.spr  font_headers.spr  font_pixelart.spr  font_symbols.spr  font_text.spr  font_text_bold.spr  font_widgets.spr  poland.spr
data/worldcells/: demo_mov.cell  demo_mov.light
devtools/: codegen.py  maketool.ini  maketool.py  tram_collision_export.py  tram_dynamic_obj_export.py  tram_static_obj_export.py
devtools/converters/: debugfontgen.py  errorgenerator.py
devtools/exporters/: tram_anim_export.py  tram_collision_export.py  tram_dynamic_obj_export.py  tram_file_export.py  tram_material_import.py  tram_static_obj_export.py
devtools/tbsp/: Makefile  engine_libs.cpp  main.cpp  movs.map  paliktnis.map
devtools/tmap/: Makefile  engine_libs.cpp  main.cpp
devtools/trad/: Makefile  engine_libs.cpp  main.cpp  main2.cpp
docs/: default.css  documentation.html  enterprise.css  features.html  generate.bat  index.html  learn.html  no_gifs.css  page_generator.py  patterns.html  roadmap.html  tramway.html  why.html
docs/cppapi/: aabb_8cpp.html  aabb_8h.html  aabb_8h_source.html  actions_8h.html  actions_8h_source.html  ai_8cpp.html  ai_8h.html  ai_8h_source.html  animationtable_8cpp.html  animationtable_8h.html  animationtable_8h_source.html  annotated.html  api_8cpp.html  async_8cpp.html  async_8h.html  async_8h_source.html  attributes_8cpp.html  attributes_8h.html  attributes_8h_source.html  audio_2api_8h.html  audio_2api_8h_source.html  audio_2audio_8cpp.html  audio_2audio_8h.html  audio_2audio_8h_source.html  audio_2graph_8cpp.html  audio_2graph_8h.html  audio_2graph_8h_source.html  audio_2sound_8cpp.html  audio_2sound_8h.html  audio_2sound_8h_source.html  buffer_8cpp.html  buffer_8h.html  buffer_8h_source.html  bullet_8cpp.html  bullet_8h.html  bullet_8h_source.html  camera_8cpp.html  camera_8h.html  camera_8h_source.html  character_8cpp.html  (+1253 more)
docs/documentation/: audio.html  components.html  entities.html  entitydefinition.html  extensions.html  framework.html  index.html  leveleditor.html  physics.html  platform.html  plugin.html  render.html
docs/learn/: 3dmodeling.html  animations.html  boomer.html  cake.html  cameras.html  getstarted.html  materials.html  physics.html  pingpong.html  platforms.html  render.html  scripting.html  structure.html  walking.html  whatis.html  world.html
docs/manual/: armature.html  armaturecomponent.html  async.html  core.html  crate.html  entity.html  entitycomponent.html  event.html  gettingstarted.html  gui.html  index.html  light.html  lightcomponent.html  message.html  overview.html  page_generator.py  physicscomponent.html  player.html  playercomponent.html  render.html  rendercomponent.html  resource.html  staticworldobject.html  ui.html  worldcell.html
docs/src/: documentation.html  features.html  index.html  learn.html  patterns.html  roadmap.html  template.html  why.html
libraries/: README.md  glad.c  murmur.h
libraries/glad/: glad.c  glad.h  glad_old.c
libraries/headers/: glad.c  glad.h  glad_gles3.c  glad_gles3.h  glad_old.h
libraries/sdl2/: SDL_config.h  SDL_revision.h
saves/: aaa.cfg
scripts/: api.lua  bepis.lua  init.lua
shaders/: adnjadnljdn.bat  glyph.frag  glyph.vert  line.vert  normal_dynamic.frag  normal_dynamic.vert  normal_dynamic_alpha.frag  normal_sprite.vert  normal_static.frag  normal_static.vert  normal_water.frag  text.vert
shaders/gles3/: 1normal_static.vert  bright_static.frag  glyph.frag  glyph.vert  line.frag  line.vert  normal_dynamic.frag  normal_dynamic.vert  normal_dynamic_alpha.frag  normal_sprite.frag  normal_sprite.vert  normal_static.frag  normal_static.vert  normal_static_alpha.frag  normal_water - Copy.frag  normal_water.frag  poopwater_static.vert  text.frag  text.vert
shaders/opengl3/: glyph.frag  glyph.vert  line.frag  line.vert  normal_dynamic.frag  normal_dynamic.vert  (+8 more)
src/: armature.h  async.cpp  async.h  audio.cpp  audio.h  audioloader.cpp  config.h  core.cpp  core.h  entities.h  entity.cpp  entitycomponents.cpp  entitycomponents.h  file.h  forexamples.cpp  gui.cpp  gui.h  info.dox  logging.cpp  logging.h  main.cpp  menu.cpp  navigation.cpp  navigation.h  net.cpp  physics.cpp  physics.h  render.cpp  render.h  render_opengl.cpp  serializeddata.h  shader.cpp  templates.h  ui.cpp  ui.h  worldcell.cpp
tests/: Makefile  README.md  aabb_tree.cpp  core.cpp  event.cpp  file.cpp  hashmap.cpp  octree.cpp  pool.cpp  queue.cpp  settings.cpp  stack.cpp  stackpool.cpp  uid.cpp  value.cpp
web/: index.html
(+758 files in other folders)
